CANDLEPIN-456: Fixed input validation on content creation endpoint
- Corrected the input validation on the POST /owners/{key}/content
  endpoint to no longer require the content ID on creation
- Updated the input validation on content creation to throw 400s
  when the label, name, type, or vendor fields are not provided
  during content creation, rather than erroring with a 500
- Updated the ValidationExceptionMapper to separate constraint
  violations when building the response error message
- Updated a few older bits of code with to fit with modern practices
  and stylistic choices
- Updated a couple of the OpenAPI generator templates to produce
  slightly more readable code